5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1602_1017.log
== TEST (2019-03-29 14:45:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 km
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:46:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians sin cos
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 km
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
File "XXXX", line 4
    from math import radians sin cos
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:46:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 km
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
File "XXXX", line 9
    R = 6371.01 km
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:46:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 "km"
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
File "XXXX", line 9
    R = 6371.01 "km"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:47:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 ("km")
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = 6371.01 ("km")
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:48:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 ("km")
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = 6371.01 ("km")
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:48:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01 ("km")
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = 6371.01 ("km")
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 14:49:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- EXECUTION TIME:
0.18518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:49:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*(arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:52:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'acos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:52:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'acos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:48:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'acos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:48:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'acos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:51:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(float(round(d, 2)))
-- ERROR:
File "XXXX", line 12
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:56:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
math.sin (t1, t2)
math.cos (g1, g2)
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(radians(float(round(d, 2)))
-- ERROR:
File "XXXX", line 14
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:57:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
math.sin (t1, t2)
math.cos (g1, g2)
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(d)
-- EXECUTION TIME:
0.300901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    math.sin (t1, t2)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:16:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:17:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*Arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*Arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'Arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:25:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:26:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
from math import acos
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:26:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
from math import acos sin cos
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    from math import acos sin cos
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:27:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
from math import acos
from math import sin
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'cos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:27:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
from math import acos
from math import sin
from math import cos
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:27:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
from math import acos
from math import sin
from math import cos
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2))
-- ERROR:
File "XXXX", line 15
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:44:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:44:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2))
-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:44:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d, 2))
-- ERROR:
File "XXXX", line 12
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:46:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:46:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:" )))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(float(round(d, 2)))
-- EXECUTION TIME:
0.176949
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
